--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,14 @@ language: java
 jdk:
 - oraclejdk8
 script: mvn -V -e -B clean verify
-after_success: bash <(curl -s https://codecov.io/bash)
+after_success:
+- mvn jacoco:report jacoco:report-integration
+- bash <(curl -s https://codecov.io/bash)
 deploy:
   provider: script
-  script: cp .travis.settings.xml $HOME/.m2/settings.xml && mvn -e -B compile site-deploy
+  script:
+  - cp .travis.settings.xml $HOME/.m2/settings.xml
+  - mvn -e -B compile site-deploy
   skip_cleanup: true
   on:
     branch: master
