--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,10 @@ jdk:
 - oraclejdk8
 script: mvn -V -e -B clean verify
 after_success:
-- mvn jacoco:report jacoco:report-integration
-- bash <(curl -s https://codecov.io/bash)
+- mvn jacoco:report
+- bash <(curl -s https://codecov.io/bash) -c -F unittests
+- mvn jacoco:report-integration
+- bash <(curl -s https://codecov.io/bash) -c -F integration
 deploy:
   provider: script
   script: cp .travis.settings.xml $HOME/.m2/settings.xml && mvn -e -B compile site-deploy
