--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<version>3</version>
 	</parent>
 
-	<groupId>com.github.jonasrutishauser.plugin</groupId>
+	<groupId>com.github.jonasrutishauser.maven.plugin</groupId>
 	<artifactId>bpmn-maven-plugin</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>maven-plugin</packaging>
