--- a/src/test/projects/example/pom.xml
+++ b/src/test/projects/example/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.github.jonasrutishauser.plugin.test</groupId>
+	<groupId>com.github.jonasrutishauser.maven.plugin.test</groupId>
 	<artifactId>example</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 
@@ -11,7 +11,7 @@
 		<pluginManagement>
 			<plugins>
 				<plugin>
-					<groupId>com.github.jonasrutishauser.plugin</groupId>
+					<groupId>com.github.jonasrutishauser.maven.plugin</groupId>
 					<artifactId>bpmn-maven-plugin</artifactId>
 					<version>${it-plugin.version}</version>
 				</plugin>
@@ -23,7 +23,7 @@
 		<excludeDefaults>true</excludeDefaults>
 		<plugins>
 			<plugin>
-				<groupId>com.github.jonasrutishauser.plugin</groupId>
+				<groupId>com.github.jonasrutishauser.maven.plugin</groupId>
 				<artifactId>bpmn-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
