--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
           key: ${{ runner.os }}-m2-${{ matrix.java }}-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2-${{ matrix.java }} ${{ runner.os }}-m2
       - name: Build with Maven
-        run: mvn -B -V -e clean verify
+        run: mvn -B -V -e clean install
       - name: Unittest Coverage
         if: ${{ matrix.java == '11' }}
         run: >
